Cleaned up requirements.txt for Render deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,10 @@
-anyio
-argon2-cffi
-argon2-cffi-bindings
-asttokens
-async-lru
-attrs
-Babel
-backcall
-beautifulsoup4
-bleach
-blinker
-Bottleneck
-Brotli
-certifi
-cffi
-charset-normalizer
-click
-colorama
-comm
-debugpy
-decorator
-defusedxml
-exceptiongroup
-executing
-fastjsonschema
 Flask
-idna
-importlib-metadata
-ipykernel
-ipython
-itsdangerous
-jedi
-Jinja2
-json5
-jsonschema
-jsonschema-specifications
-jupyter-events
-jupyter-lsp
-jupyter_client
-jupyter_core
-jupyter_server
-jupyter_server_terminals
-jupyterlab
-jupyterlab-pygments
-jupyterlab_server
-MarkupSafe
-matplotlib-inline
-mistune
-mkl-fft
-mkl-random
-mkl-service==2.4.0
+gunicorn
 mysql-connector-python
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-notebook
-notebook_shim
-numexpr
-numpy
-overrides
-packaging
 pandas
-pandocfilters
-parso
-pickleshare
-platformdirs
-prometheus-client
-prompt-toolkit
-psutil
-pure-eval
-pycparser
-Pygments
-PySocks
-python-dateutil
-python-json-logger
-pytz
-PyYAML
-pyzmq
-referencing
-requests
-rfc3339-validator
-rfc3986-validator
-rpds-py
-Send2Trash
-six
-sniffio
-soupsieve
-stack-data
-terminado
-tinycss2
-tomli
-tornado
-traitlets
-typing-extensions
-tzdata
-urllib3
-wcwidth
-webencodings==0.5.1
-websocket-client
 Werkzeug
-win-inet-pton
-zipp
+Jinja2
+itsdangerous
+click
+flask-socketio
+python-dotenv
